test/invalid/baseline/async-iterable-unterminated-args.txt
Syntax error at line 3 in async-iterable-unterminated-args.webidl, since `interface X`:
};
^ Unterminated async iterable argument list
